# trading-research

./: .gitignore  AGENTS.md  QUICKSTART.md  README.md  SETUP_COMPLETE.md  generate_test_data.py  prepare.py  program.md  program_0dte.md  pyproject.toml  strategy.py  strategy_0dte.py  strategy_mean_reversion.py
