[project]
name = "trading-research"
version = "0.1.0"
description = "Autonomous trading strategy research swarm"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.3.3",
    "numpy>=2.2.6",
    "ta>=0.11.0",
    "plotly>=5.24.1",
    "python-telegram-bot>=21.7",
    "ib-insync>=0.135.0",
]

[tool.uv]
dev-dependencies = []
